--- a/markup/_layouts/_content/faq.jade
+++ b/markup/_layouts/_content/faq.jade
@@ -2,13 +2,13 @@ section.nl-section.nl-faq
     div.container-fluid
         div.row
             div.col-12
-                h2 FAQ
+                h1 FAQ
                 div(id="accordion" role="tablist" aria-multiselectable="true")
                     div.card
                         div.card-header(role="tab" id="headingOne")
                             h5.mb-0
                                 a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne")
-                                    |why nlc2?
+                                    |Why NLC2?
                         div(id="collapseOne" class="collapse " role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p Using NLC2 instead of fiat currency allows the platform to navigate around restrictive sports betting laws in the United States and other countries around the world. This gives the platform a truly global reach that long-established competitors can only dream of.
@@ -16,7 +16,7 @@ section.nl-section.nl-faq
                         div.card-header(role="tab" id="headingTwo")
                             h5.mb-0
                                 a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo")
-                                    |what is no limit fantasy sports
+                                    |What is No Limit Fantasy Sports
                         div(id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p Put simply, fantasy sports is a way of betting on sports events that focus on the performances of players. The objective is to choose a squad of players you think will perform the best over a one week period, for the lowest amount of money. Your rewards are then determined by your chosen squad’s performance.
