--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -1,6 +1,7 @@
 .nl-players {
   background: url(../img/stadion_full.jpg) 0 0 no-repeat fixed;
   background-size: cover;
+  background-position: bottom;
   color: #121a31;
   padding-bottom: calculateRem(160px);
   padding-top: calculateRem(30px);
