--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -212,6 +212,7 @@
       margin: 0.5rem 0;
 
       button{
+        font-weight: 600;
         display: block;
         min-width: calculateRem(80px);
         margin-left: auto;
