--- a/markup/_layouts/_content/my-balances.jade
+++ b/markup/_layouts/_content/my-balances.jade
@@ -1,25 +1,35 @@
 section.nl-section.nl-my-balances
     div.container.nl-my-balances-wrapper
+               
         div.row
-            .col-12.col-sm-6.col-md-6.col-lg-4
+            .col-12
+                h2 Exchange rate
+        div.row
+            .col-12.col-sm-6.col-md-6.col-lg-4.offset-lg-2
                 .quote-wrapper
                     p
                         | NLC2 - BTC:
                         span.value 0.000043
-            .col-12.col-sm-6.col-md-6.col-lg-4.offset-lg-4
+            .col-12.col-sm-6.col-md-6.col-lg-4
                 .quote-wrapper
                     p
                         | NLC2 - USD :
                         span.value 0.16089
 
-        
-        div.row
+        div.row.deposit-purchase
+            .col-sm-1.col-md-1.col-lg-3
+            .col-12.col-sm-10.col-md-10.col-lg-6
+                button.btn.btn-primary DEPOSIT
+                button.btn.btn-primary purchase 
+            .col-sm-1.col-md-1.col-lg-3  
+
+        div.row.balance-spacing
             .col-12
                 h2 MY BALANCE
 
         div.row
-            .col-lg-2.col-sm-1.col-md-1
-            .col-12.col-sm-10.col-md-10.col-lg-8
+            .col-md-1.col-lg-2
+            .col-12.col-sm-12.col-md-10.col-lg-8
                 table.table.balance-table
                     thead
                         tr
@@ -36,20 +46,19 @@ section.nl-section.nl-my-balances
                             td 1,26,277.5
                             td 0.2699325
                             td 1,009.96
-            .col-lg-2.col-sm-1.col-md-1                
-        
-        div.row.nl-balances-btn-wrapper
-            .col-12 
-                button.btn.btn-primary DEPOSIT
-                button.btn.btn-primary purchase
+                               
+            .col-md-1.col-lg-2                          
+
+
+
 
         div.row.balance-status
             .col-12
-                h2 BALANCE STATUS
+                h2 STATUS
         
         div.row
-            .col-lg-2.col-sm-1.col-md-1
-            .col-12.col-sm-10.col-md-10.col-lg-8
+            .col-md-1.col-lg-2
+            .col-12.col-sm-12.col-md-10.col-lg-8
                 table.table.balance-table
                     thead
                         tr
@@ -66,11 +75,14 @@ section.nl-section.nl-my-balances
                             td 1,26,277.5
                             td 1200
                             td 500000
-            .col-lg-2.col-sm-1.col-md-1    
-        div.row.nl-balances-btn-wrapper
-            .col-12
-                button.btn.btn-primary STATEMENT
-                
-                button.btn.btn-primary WITHDRAW
+                                
+            .col-md-1.col-lg-2
+
+        div.row.deposit-purchase
+            .col-sm-1.col-md-1.col-lg-3
+            .col-12.col-sm-10.col-md-10.col-lg-6
+                button.btn.btn-primary Withdraw
+                button.btn.btn-primary statement 
+            .col-sm-1.col-md-1.col-lg-3 
 
 
