--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -19,17 +19,22 @@ header.nl-header-log
                                         div.nl-title The worlds first crypto fantasy sports
                             div.col-lg-5.nl-header-top--right
                                 div.nl-profile
-                                    div.nl-profile--avatar
-                                        <i class="fa fa-user-circle" aria-hidden="true"></i>
-                                    div.nl-profile--data
-                                        div.name Name
-                                        div.settings
-                                            a(href="#")
-                                                <i class="fa fa-cog" aria-hidden="true"></i>
-                                            a(href="#")
-                                                <i class="fa fa-envelope" aria-hidden="true"></i>
-                                            a(href="#")
-                                                <i class="fa fa-bell" aria-hidden="true"></i>
+                                    div.row
+                                        .col-lg-12
+                                            div.nl-profile--avatar
+                                                //- <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                                img(src="assets/img/profile-picture.png" alt="NO Limit")
+                                    
+                                        .col-lg-12
+                                            div.nl-profile--data
+                                                div.name Name
+                                        //- div.settings
+                                        //-     a(href="#")
+                                        //-         <i class="fa fa-cog" aria-hidden="true"></i>
+                                        //-     a(href="#")
+                                        //-         <i class="fa fa-envelope" aria-hidden="true"></i>
+                                        //-     a(href="#")
+                                        //-         <i class="fa fa-bell" aria-hidden="true"></i>
 
 
                                 div.nl-balance
