--- a/markup/_layouts/_content/contact.jade
+++ b/markup/_layouts/_content/contact.jade
@@ -1,7 +1,7 @@
 section.nl-section.contact-wrapper
     
     div.row
-        .col-lg-8.offset-lg-4.col-md-6.offset-md-3.col-sm-6.offset-sm-3.col-12
+        .col-lg-8.offset-lg-4.col-md-6.offset-md-2.col-sm-12.col-12.contact-title
             h1 Contact
 
     div.row
@@ -23,7 +23,7 @@ section.nl-section.contact-wrapper
                                     img.mail-icon(src='assets/img/mail-icon.png', alt="mail icon")
                                     p
                                         a(href='mailto:nlfantasymonitor@gmail.com') nlfantasymonitor@gmail.com
-        .col-lg-8.offset-lg-4.col-md-6.offset-md-3.col-sm-6.offset-sm-3.col-8.offset-2
+        .col-lg-8.offset-lg-4.col-md-6.offset-md-2.col-sm-6.offset-sm-1.col-8.offset-1
             p.ads
                 |For information regarding Advertising or Affiliates, please email: &nbsp;
                 a(href='mailto:oaperalta27@gmail.com') oaperalta27@gmail.com
