--- a/markup/_layouts/login.jade
+++ b/markup/_layouts/login.jade
@@ -16,11 +16,12 @@ html(lang="en")
 
         //include _partials/preloader.jade
         include _partials/header-form.jade
+        //- include _partials/header-log.jade
         main
             include _content/login-content
 
 
-        include _partials/footer.jade
+        include _partials/footer-log.jade
         include _partials/scripts.jade
 
 
