--- a/markup/_layouts/_partials/header-form.jade
+++ b/markup/_layouts/_partials/header-form.jade
@@ -2,17 +2,20 @@
 header.nl-header
     div.nl-header--top
         div.container-fluid
+
             div.row.align-items-start
                 div.col-4.col-lg-2
                     div.nl-logotype
                         a(href="index.html")
-                            img(src="assets/img/logotype.svg" alt="NO Limit")
+                            img(src="assets/img/logotype.png" alt="NO Limit")
                 div.col-1.col-lg-7
                     div.nl-title The worlds first crypto fantasy sports
                 div.col-12.col-lg-3
-                    div.nl-btutton-login
+                    div.nl-button-login
                         button.btn.btn-primary.nl-m-r-15(type='button', data-toggle='modal', data-target='#loginModal') Login
                         button.btn(type='button', data-toggle='modal', data-target='#registrationModal') SIGN UP
+   //- / div.row.orange-bar
+        .col-12.col-lg-12
 
 
 
