--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -6,7 +6,7 @@ header.nl-header
                 div.col-4.col-lg-2
                     div.nl-logotype
                         a(href="index.html")
-                            img(src="assets/img/logotype.svg" alt="NO Limit")
+                            img(src="assets/img/logotype.png" alt="NO Limit")
                 div.col-1.col-lg-7
                     div.nl-title The worlds first crypto fantasy sports
                 div.col-12.col-lg-3
