--- a/markup/_layouts/register.jade
+++ b/markup/_layouts/register.jade
@@ -22,7 +22,7 @@ html(lang="en")
             include _content/register-content
 
 
-        include _partials/footer.jade
+        include _partials/footer-log.jade
         include _partials/scripts.jade
 
 
