--- a/markup/_scss/sections/_register.scss
+++ b/markup/_scss/sections/_register.scss
@@ -1,43 +1,48 @@
-.register-wrapper{
-  background: url(../img/nl-slide-img.jpg) top center no-repeat;
+.registration-wrapper{
+  // background: url(../img/nl-slide-img.jpg) top center no-repeat;
+  // background: url(../img/stadion_detail-no_filter.jpg) 0 0 no-repeat;
+  background: url(../img/stadion_full.jpg) 0 0 no-repeat;
   background-size: cover;
+  background-position: bottom;
+  padding: 2rem 0;
 }
 #registrationSection {
+  
+  #country {
+    margin-bottom: 1.25rem;
+  }
+
   position: relative;
+
+  .block-dialog{
+    min-height: 0;
+  }
 
   .block-content {
     border-radius: calculateRem(8px);
   }
   .block-header {
-    border-top-right-radius: .3rem;
-    border-top-left-radius: .3rem;
-    background-color: #fb8700;
-    color: #fff;
-    padding: calculateRem(30px) 0;
+
+    background-color: transparent;
+    color: #061540;
+    padding: 1rem;
     position: relative;
-    @include respond-to(allmobile){
-      padding: calculateRem(20px) calculateRem(10px) calculateRem(20px);
-    }
 
     h2 {
       margin: 0 auto;
+      font-size: 2rem;
       text-align: center;
-      font-size: calculateRem(50px);
-      @include respond-to(allmobile){
-        font-size: calculateRem(50px);
-      }
     }
     .close {
       background: url(../img/close_btn.png) no-repeat;
       position: absolute;
-      top: calculateRem(28px);
-      right: calculateRem(20px);
+      top: 1.0rem;
+      right: 1.25rem;
       height: 49px;
       width: 49px;
       opacity: 1;
       outline: none;
-      @include respond-to(allmobile){
-        display: none;
+      @include respond-to(allsmall){
         top: calculateRem(10px);
         right: calculateRem(10px);
       }
@@ -47,24 +52,33 @@
   .block-header, .block-footer {
     border: none;
   }
-  .block-body, .block-footer {
-    background-color: #1d2d4e;
+  .block-body {
+    background-color: transparent;
+  }
+
+  .block-footer {
+    background-color: transparent;
   }
 
   .block-body {
-    padding: calculateRem(40px) calculateRem(100px) 0;
+    height: 100%;
+    padding: 0.5rem 6.25rem 0;
     @include respond-to(allsmall){
       padding: calculateRem(72px) calculateRem(20px) 0;
     }
-
-    input, select {
-      height: calculateRem(60px);
-      border-radius: 0;
-      font-size: calculateRem(20px);
+    input {
+      border-top-right-radius: 0.3rem;
+      border-top-left-radius: 0.3rem;
+      border-bottom-right-radius: 0.3rem;
+      border-bottom-left-radius: 0.3rem;
+      height: calculateRem(45px);
+      // border: 0;
+      font-size: 0.75rem;
       margin-bottom: calculateRem(20px);
       @include respond-to(allsmall){
         width: 100%;
       }
+
     }
 
     .input-group {
@@ -80,42 +94,47 @@
       color: #fb8700;
       cursor: pointer;
       text-transform: uppercase;
+      font-size: 0.75rem;
     }
     a {
       text-decoration: underline;
       color: #fb8700;
     }
-
-    .check-wrapper{
-      font-size: calculateRem(12px);
-      position: relative;
-      padding-left: calculateRem(50px);
-      color: #fff;
-
-      input{
-        outline: none;
-        height: calculateRem(30px);
-        width: calculateRem(30px);
-        position: absolute;
-        top: 0;
-        left: 0;
-
-
-      }
-    }
   }
   .block-footer {
-    padding: calculateRem(20px) 0 calculateRem(50px);
+    padding: 0.625rem 0;
     border-bottom-right-radius: .3rem;
     border-bottom-left-radius: .3rem;
 
     button {
-      width: calculateRem(278px);
+      width: auto;
       margin: 0 auto;
-      font-size: calculateRem(28.61px);
+      font-size: 1.38813rem;
+      font-weight: 600;
     }
   }
 
+  .check-wrapper{
+    font-size: calculateRem(12px);
+    position: relative;
+    padding-left: calculateRem(50px);
+    color: #fff;
+
+    p {
+      color: #061540;
+    }
+
+    input{
+      outline: none;
+      height: calculateRem(30px);
+      width: calculateRem(30px);
+      position: absolute;
+      top: 0;
+      left: 0;
+
+
+    }
+  }
 }
 
 @media (min-width: 576px) {
